--- a/SCSS/sections/_solution-section.scss
+++ b/SCSS/sections/_solution-section.scss
@@ -194,7 +194,7 @@
   overflow: hidden;
   position: relative;
   display: block;
-  padding: $spacing-base $spacing-xlarge;
+  padding: $spacing-base 0;
   margin-top: $spacing-base;
 }
 
